Found out which html is having problems

--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@ Nothing to see yet, move along...
 
   <h5>
     The following is an abtract the full report can be found
-    <a href="./Reports/Full_Report.pdf" download>here</a>
+    <a href="Reports/Full_Report.pdf" download>here</a>
   </h5>
-
-<p>not folder</p>
 
   <p>We were motivated to find a way to generate a perfect bracket or a better bracket than average based on the idea that it is a mathematically interesting task and economically advantageous. It is mathematically interesting because the predicted odds of getting a perfect bracket are 1 in 1,610,543,269 (for the year 2015). Additionally, it is economically advantageous because we can make money by betting with our friends and others on who has a better bracket.</p>
   <p>We used a Decision Tree from the Scikit library. We took in many features about a team’s stats and the regular season game stats and took the differential of these features so we ended with point differential, rebound differential, FG percentage, and other features. Additionally, we limited the size of our tree to prevent over fitting.</p>
